# symbolica-feynman-rules

./: .gitignore  PROJECT_GOAL.md  README.md  RESEARCH_LOG.md  ROADMAP.md  THESIS_PROGRESS.md  phi_phi_psibar_psi_deep_dive.md  pyproject.toml  requirements.txt  run_diagrams.sh  setup_env.sh  symbolica_interaction_term.ipynb
Notebooks/: SpensoExample.ipynb  codebase_workflow_walkthrough.ipynb  first.ipynb  playground.ipynb  symbolica_interaction_term.ipynb  test_phi4.ipynb
code/: LagrangainArchitecture.py  cas_vertex.py  examples_metadata.py  examples_scalar.py  examples_symbolica.py  model.py  model_legacy.py  model_schema.py  model_symbolica.py  prototype_terms.py  spenso_gamma_checks.py  spenso_structures.py
docs/: FIELD_TRANSFORMATIONS.md  SM_FR_COMPARISON_REVIEW.md  thesis_pipeline_chapter.md  user_manual.html
examples/: examples.py  examples_electroweak_ssb.py  examples_electroweak_unbroken.py  examples_flavor_expansion.py  examples_lagrangian.py  examples_standard_model.py  examples_su2.py
models/: __init__.py
notebooks/: .gitignore  SM_comparison.ipynb  SM_feynpy.ipynb  codebase_workflow_walkthrough.ipynb  electroweak_ssb_walkthrough.ipynb  field_strength_operators_walkthrough.ipynb  field_transformations_quickstart.ipynb  final_walkthrough_capabilities_and_usage.ipynb  flavor_expansion_walkthrough.ipynb  index_handling.ipynb  index_handling_from_start_to_end.ipynb  list_lagrangians.ipynb  nested_derivative_operators.ipynb  operator_action_and_symbolica_walkthrough.ipynb  operator_ssb_shift_study.ipynb  playground.ipynb  presentation.ipynb  (+4 more)
(+227 files in other folders)
